update README, tagged v3.2.6

--- a/README.org
+++ b/README.org
@@ -192,6 +192,7 @@ You declaratively tell the ~leaf~ to configure the package using special keyword
 * Customize
 - leaf-defaults: Default arguments for all leaf-block.
 - leaf-expand-{{keyword}}: If nil, not to expand that keyword.
+- leaf-expand-minimally: If nil, disable keywords that are not needed for debugging.
 
 * Syntaxes
 All below examples are excerpts from ~leaf-tests.el~.
