--- a/README.org
+++ b/README.org
@@ -335,7 +335,12 @@ you can also use ~:ensure~ as ~:package~.
          (leaf-handler-package leaf feather nil)
          (leaf-handler-package leaf leaf-key nil)
          (leaf-handler-package leaf leaf-browser nil)
-         (leaf-init)))))
+         (leaf-init)))
+
+    ((leaf leaf
+       :package (t . pin))
+     (prog1 'leaf
+       (leaf-handler-package leaf leaf pin)))))
 
   (cort-deftest-with-macroexpand leaf/handler-package
     '(((leaf macrostep :ensure t)
